<resources>
    <string name="app_name" translatable="false">The Big App{le}</string>
    <string name="title_activity_ny_map">Map</string>

    <string name="hello">Hello!</string>
    <string name="mainButton">FIND NYS\' MOST POPULAR PLACES</string>
    <string name="info">Based on Foursquare</string>

    <string name="info_menu">Info</string>
    <string name="settings_menu">Settings</string>

    <string name="info_title">Info about the app</string>
    <string name="info_text">This app is part of the course \"Distributed Systems\" of AUEB.
                    Just click the button \"Find NYs most popular places\" and you will be transfered
                    in NYC location at Google Maps. Select the area you are interested in and the top-K
                    locations you want to see and click the button \"Done\". You\' ll get the final results
                    with Markers on the map. Enough talking, let\'s try the app by yourselves!
    </string>
    <string name="info_dev_title">Developers</string>
    <string name="info_dev">-Bill Bouzas\n-Panagiotis Chalkiotis\n-Panagiotis Tassias\n-Mary Tzelou</string>

    <string name="settings_title">Settings</string>
    <string name="language_title">Which language you prefer?</string>
    <string-array name="languages">
        <item>English</item>
        <item>Greek</item>
    </string-array>
    <string name="save_button">SAVE</string>
    <string name="alert_title">Saving changes...</string>
    <string name="alert_message">App will close now for changes to be saved!</string>
    <string name="title_activity_maps">Map</string>

    <string name="done_button">DONE</string>
    <string name="howToUse">How to use the app?</string>
    <string name="howToUseText">Long press somewhere in the map and a Polygon with 4 Markers will appear.
                    You can move the 2 Markers to resize polygon and select the area you\'re interested in.
                    If you long press again the map the polygon will be removed to start the proceduce from the beginning.
                    When you\'re ready press the button \"DONE\" to get results.
    </string>
    <string name="topK">Top Results?</string>
    <string name="mapper_offline_text">You are not connected to a network or mappers are unavailable right now...</string>
    <string name="mapper_offline">Connection problem!</string>
    <string name="empty_text_title">Empty field \"Top results?\"</string>
    <string name="empty_text_message">You should first put a number in the field and then click DONE</string>
    <string name="done_title">Transfering values completed!</string>
    <string name="done_message">Press OK and wait for results from Reducer</string>
    <string name="reduce_done">You got final result from Reducer!</string>
    <string name="reducer_done_message">Press OK to see the results!</string>
    <string name="set_position_title">Set area first!</string>
    <string name="set_position_message">For process to begin it\'s necessary to set the desired area</string>
    <string name="reduce_progress">Please wait while results come from Reducer...</string>
    <string name="from_date">From date...</string>
    <string name="to_date">To date...</string>
    <string name="set">SET</string>
    <string name="empty_fromDate_title">\"From date\" field is empty</string>
    <string name="empty_fromDate_message">You should first set \"From date\" field to continue...</string>
    <string name="empty_toDate_title">\"To date\" field is empty</string>
    <string name="empty_toDate_message">You should first set \"Το date\" field to continue...</string>
    <string name="results_info">The results are sorted by popularity</string>
    <string name="showHideLayout">Show/Hide Results</string>
    <string name="seePicsLabel">See Pics!</string>
    <string name="savePicButton">SAVE PICTURE</string>
    <string name="no_images">No images found for selected POI!</string>
</resources>
