<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="projb.dissystems.aueb.vassilis.nycheckins.settings"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:id="@+id/settings_title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="30sp"
        android:longClickable="false"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_title"
        android:id="@+id/language_title"
        android:textSize="15sp"
        android:longClickable="false"
        android:layout_marginBottom="10sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language_list"
        android:spinnerMode="dropdown"
        android:longClickable="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/save_button"
        android:layout_gravity="center_horizontal"
        android:onClick="saveButtonClick" />
</LinearLayout>
