<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projb.dissystems.aueb.vassilis.nycheckins.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/hello"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/android_face" />

        <Button
            android:id="@+id/mainButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_effect"
            android:text="@string/mainButton"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:onClick="mainButtonClick" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/four_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:scaleType="center"
        android:layout_alignParentBottom="true"
        android:src="@drawable/fours_logo"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="right|center_vertical"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_toStartOf="@id/four_logo"
        android:textAlignment="viewEnd" />

</RelativeLayout>
